{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 86,
  "lineage": "a707489d-a87e-133b-44f8-d5f8e2b48acd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09988af38874e31a6",
            "owner_id": "239099794600",
            "tags": {
              "Name": "Gateway Main"
            },
            "vpc_id": "vpc-091407394a4e633c4"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0694d2735926c3c49",
            "owner_id": "239099794600",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09988af38874e31a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table Mainx"
            },
            "vpc_id": "vpc-091407394a4e633c4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2a7d406940955c9",
            "route_table_id": "rtb-0694d2735926c3c49",
            "subnet_id": "subnet-065e63ff72511cf37"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e3a2683a44ce48d",
            "route_table_id": "rtb-0694d2735926c3c49",
            "subnet_id": "subnet-0ab7f2a62a498a559"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet2",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9568514a5aa730",
            "route_table_id": "rtb-0694d2735926c3c49",
            "subnet_id": "subnet-08b3d344744c51666"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet3",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239099794600:security-group/sg-08aea2c8bdd3d9ba7",
            "description": "Allow ping and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08aea2c8bdd3d9ba7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_ping_ssh",
            "name_prefix": null,
            "owner_id": "239099794600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ping y SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-091407394a4e633c4"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239099794600:security-group/sg-0fc971d4f78a986fa",
            "description": "Allow ping and SSH",
            "egress": [],
            "id": "sg-0fc971d4f78a986fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_http",
            "name_prefix": null,
            "owner_id": "239099794600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HHTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-091407394a4e633c4"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239099794600:subnet/subnet-065e63ff72511cf37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-065e63ff72511cf37",
            "map_public_ip_on_launch": true,
            "owner_id": "239099794600",
            "tags": {
              "Name": "Subnet 1 en us-east-1a"
            },
            "vpc_id": "vpc-091407394a4e633c4"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239099794600:subnet/subnet-0ab7f2a62a498a559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0ab7f2a62a498a559",
            "map_public_ip_on_launch": true,
            "owner_id": "239099794600",
            "tags": {
              "Name": "Subnet 1 en us-east-1b"
            },
            "vpc_id": "vpc-091407394a4e633c4"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239099794600:subnet/subnet-08b3d344744c51666",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-08b3d344744c51666",
            "map_public_ip_on_launch": true,
            "owner_id": "239099794600",
            "tags": {
              "Name": "Subnet 1 en us-east-1c"
            },
            "vpc_id": "vpc-091407394a4e633c4"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:239099794600:vpc/vpc-091407394a4e633c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f08813afdcd3c2f",
            "default_route_table_id": "rtb-07f26a6a205895e16",
            "default_security_group_id": "sg-06568d4260a6f3b31",
            "dhcp_options_id": "dopt-c4055bbf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-091407394a4e633c4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07f26a6a205895e16",
            "owner_id": "239099794600",
            "tags": {
              "Name": "Main VPC 1"
            }
          }
        }
      ]
    }
  ]
}